# Plasmatum

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.md.orig  build.sh  run.sh  tmp.ll  tmp.s
benchmarks/: bench.cc  bench.hh  list.hh
examples/: Float.plsm  Int.plsm  new.plsm  stack.plsmasm  test1.plsm
include/: ast.hh  compiler.hh  context.hh  engine.hh  file.hh  function.hh  instruction.hh  natives.hh  parser.hh  pointer.hh  runtime_functions.hh  type.hh  types.hh  utils.hh  value.hh
output/: plasmatum
src/: Context.cc  Context.h  Makefile  ast.c  ast.cc  ast.h  ast.hh  bytecode.cc  context.cc  context.hh  defines.cc  defines.hh  engine.cc  engine.hh  error.c  error.cc  error.h  error.hh  functions.c  functions.h  instruction.cc  instruction.hh  jit.cc  jit.h  lexer.l  lexer.ll  lexerparser.c  lexerparser.cc  lexerparser.h  lexerparser.hh  lib.cc  lib.hh  main.c  main.cc  parser.cc  parser.hh  parser.y  parser.yy  type.cc  type.hh  (+7 more)
src/AST/: Expr.cc  Expr.h  Stmt.cc  Stmt.h  Type.cc  Type.h
src/lib/: ast.cc  builtins.c  builtins.cc  builtins.h  compiler.cc  context.cc  engine.cc  function.cc  hash.h  instruction.cc  map.c  map.h  natives.cc  parser.cc  type.cc  utils.cc  value.cc
src/main/: main.cc
src/map/: README.md
src/runtime-lib/: functions.cc
